--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "contentful",
+  "name": "contentful-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "contentful": "^8.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
